--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #dbdbdb;
+  font-family: "Saira", sans-serif;
 }
 .cardContainer {
   display: grid;
@@ -27,7 +28,7 @@ body {
     font-weight: 700;
   }
 }
-.card:hover{
+.card:hover {
   transform: scale(1.07);
   box-shadow: 0px 0px 15px 0px #888888;
 }
@@ -45,36 +46,37 @@ body {
     background-color: #fff;
   }
 }
-.modalContainer{
-  position:fixed;
+.modalContainer {
+  position: fixed;
   top: 0px;
   left: 0px;
-  display:none;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color:#3131315e
+  background-color: #3131315e;
 }
-.modal{
+.modal {
   background-color: #fff;
   display: grid;
   grid-template-columns: 300px 2fr;
   /* grid-template-rows: 1fr 1fr 1fr 5fr; */
-  grid-template-areas: "modal_image ."
-                       "modal_image modal_title "
-                       "modal_image modal_popularity"
-                       "modal_image modal_overview";
+  grid-template-areas:
+    "modal_image ."
+    "modal_image modal_title "
+    "modal_image modal_popularity"
+    "modal_image modal_overview";
   gap: 20px;
   margin: 20px;
   padding: 20px;
   border-radius: 7px;
   max-width: 800px;
 }
-.modal_image{
+.modal_image {
   grid-area: modal_image;
 }
-.modal_title{
+.modal_title {
   font-size: 40px;
   font-weight: 700;
 }
